<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>libtorch</name>
  <version>2.1.1</version>
  <description>PyTorch C++ API</description>
  <maintainer email="Rauch.Christian@gmx.de">Christian Rauch</maintainer>
  <license>MIT</license>

  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend>ninja-build</buildtool_depend>
  <buildtool_depend>git</buildtool_depend>

  <!-- <build_depend>libvulkan-dev</build_depend> -->
  <build_depend>nvidia-cuda-dev</build_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
