<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>libtorch</name>
  <version>2.1.2</version>
  <description>PyTorch C++ API</description>
  <maintainer email="Rauch.Christian@gmx.de">Christian Rauch</maintainer>
  <license>MIT</license>

  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend>ninja-build</buildtool_depend>
  <buildtool_depend>git</buildtool_depend>

  <!-- <build_depend>libvulkan-dev</build_depend> -->
  <!-- <build_depend>nvidia-cuda</build_depend> -->
  <build_depend>python3</build_depend>
  <build_depend>python3-yaml</build_depend>
  <build_depend>python3-setuptools</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
